Fixing project section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Welcome Section */
+
 .welcome-section {
-    height: 110vh;
+    height: 100vh;
     padding: 5% 0;
     background-position: top center;
     background-size: cover;
@@ -23,7 +24,7 @@
     margin-left: 5%;
     width: 100%;
     position: absolute;
-    top: 10%; /* Dystans od góry na poziomie navbara */
+    top: 10%;
 }
 
 .welcome-section p {
@@ -32,20 +33,20 @@
     letter-spacing: 0.8px;
     line-height: 1.5em;
     text-align: justify;
-    max-width: 70%; /* Zmiana szerokości dla responsywności */
+    max-width: 60%;
     padding: 2vw;
     margin-left: 3%;
     border-radius: 25px;
     background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: calc(35% + 5vw); /* Dystans dla responsywności */
+    top: calc(25% + 5vw);
 }
 
 .welcome-section img {
     position: absolute;
-    right: 6%; /* Przesunięcie obrazu w prawo dla responsywności */
-    top: 70%; /* Dystans dla responsywności */
+    left: 15%;
+    top: 20%;
     width: 100%;
     max-width: 100%;
     z-index: -1;
@@ -53,37 +54,24 @@
 
 @media screen and (max-width: 768px) {
     .welcome-section h1 {
-        font-size: 11vw;
-        max-width: 70%;
+        font-size: 10vw;
+        max-width: 95%;
     }
 
     .welcome-section p {
-        font-size: 5vw;
-        max-width: 70%;
-        top: calc(35% + 5vw);
+        font-size: 4vw;
+        max-width: 95%;
+        top: calc(30% + 4vw);
     }
 
     .welcome-section img {
         position: absolute;
-        right: 6%;
-        top: 70%;
+        top: 65%;
+        left: 0;
         width: 100%;
         max-width: 100%;
         z-index: -1;
     }
-}
-
-/* Rest of the sections */
-.section {
-    height: 100vh;
-    padding: 5% 0;
-    background-position: top center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    max-width: 100%;
-    box-sizing: border-box;
 }
 
 /* Nav Bar */
@@ -126,10 +114,10 @@ nav ul li {
     list-style: none;
     text-decoration: none;
     color: #fff;
-    border-radius: 25px;
+    border-radius: 20px;
     font-size: 20px;
-    padding: 6%;
-    margin: 0 10px; /* Zwiększono odstęp między elementami */
+    padding: 5%;
+    margin: 0 5px; /* Zwiększono odstęp między elementami */
     transition: background 0.3s ease, color 0.3s ease, margin-right 0.3s ease;
 }
 
@@ -279,28 +267,20 @@ nav ul li.active {
 
 .work-section img {
     position: absolute;
-    left: -10%;
-    margin-top: -53vh;
-    transform: scale(1);
+    top: 0;
+    margin-top: 0vh;
+    transform: scale(0.95);
     max-width: 400%;
     z-index: -1;
 }
 
 .work-content {
-    width: 80%;
+    width: 100%;
     margin-left: 60%;
 }
 
 @media (min-width: 769px) and (max-width: 1300px) {
-    .work-section{
-        height: 130vh;
-    }
 
-    .work-section img {
-        position: absolute;
-        left: -10%;
-
-    }
     .work-content {
         width: 100%;
         margin-left: 50%;
@@ -308,20 +288,20 @@ nav ul li.active {
 }
 
 @media screen and (max-width: 768px) {
-    .work-section{
-        height: 130vh;
-    }
 
     .work-section img {
         position: absolute;
         margin-top: auto;
-        left: -30%;
-        top: 27.5%;
+        left: 0;
+        top: 30%;
+        transform: scale(1.8);
         width: 150%;
     }
     .work-content {
-        width: 100%;
-        margin-left: 25%;
+        position: absolute;
+        width: 75%;
+        top: 35%;
+        left: -39%;
     }
 }
 
@@ -434,17 +414,16 @@ body {
 
 @media screen and (max-width: 768px) {
     .carousel {
-        width: 95%;
-        left: -3%;
+        width: 100%;
         top:auto;
     }
 
     .nav {
-        color:rgba(150, 146, 143, 0.179);
+        color:rgb(165, 168, 144);
         margin-top: 20%;
         left: 40%;
         margin-right: 30%;
-        margin-left: -30%;
+        margin-left: -24%;
     }
 
     .card h2 {
@@ -519,7 +498,7 @@ li {
     .technology-section {
         text-align: center;
         padding: 20px;
-        height: 150vh;
+        height: 130vh;
     }
 
     .skills-container {
@@ -532,7 +511,7 @@ li {
         width: 100%;
         margin: 0;
         text-align: left;
-        font-size: 24px;
+        font-size: 23px;
         padding: 10px 0;
     }
 
@@ -541,7 +520,7 @@ li {
     }
 
     h3 {
-        font-size: 30px;
+        font-size: 23px;
         margin-bottom: 20px;
     }
 
@@ -552,7 +531,7 @@ li {
     }
 
     li {
-        font-size: 20px;
+        font-size: 16px;
         margin-bottom: 10px;
         position: relative;
         padding-left: 0px;
@@ -592,8 +571,8 @@ li {
 
 .proj-imgbx {
     position: relative;
-    width: 100%; /* Zmiana na 100% dla responsywności */
-    max-width: 520px; /* Maksymalna szerokość */
+    width: 100%; 
+    max-width: 520px; 
     height: 380px;
     border-radius: 30px;
     overflow: hidden;
@@ -615,7 +594,7 @@ li {
 }
 
 .proj-imgbx:hover::before,
-.proj-imgbx.active::before { /* Dodano .proj-imgbx.active */
+.proj-imgbx.active::before {
     height: 100%;
 }
 
@@ -666,9 +645,13 @@ li {
 
 @media (max-width: 768px) {
     .proj-imgbx {
-        margin-left: 2.5%;
+        position: relative;
+        width: 100%; 
+        height: 250px;
     }
-    .proj-imgbx::before {
-        transition: none; /* Usunięto transition dla urządzeń mobilnych */
+
+    .proj-txtx span {
+        font-size: 12px;
     }
+
 }
